<resources>
    <string name="app_name">RomaniIteDomum</string>
    <string name="google_maps_API_key">AIzaSyAPwxcEF4MMHDFkw80rEtSiQdNf2BmiiiM</string>

    <string name="edit_login_email">enter your email</string>
    <string name="edit_login_password">enter your password</string>
    <string name="button_login_confirm">Login</string>
    <string name="button_login_register">Register</string>
    <string name="text_login_reset_password">Forgot Password? Reset here.</string>
    <string name="edit_register_name">enter your name</string>
    <string name="edit_register_email">enter your email</string>
    <string name="edit_register_password">password</string>
    <string name="edit_register_password_again">password again</string>
    <string name="button_register_submit">Submit</string>
    <string name="button_register_login">Back to Login</string>
    <string name="toast_empty_fields">Please fill empty fields</string>
    <string name="toast_invalid_password">Please make sure password is correct!</string>
    <string name="toast_backendless_error">Error:</string>
    <string name="register_backendless_user">Busy registering user... please wait...</string>
    <string name="toast_login_successful">Logged in successfully!</string>
    <string name="toast_forgot_password">Please enter your email address!</string>
    <string name="toast_backendless_reset_password_instructions">Reset instructions sent to email address!</string>
    <string name="toast_google_service_error">You can\'t make map requests</string>
    <string name="toast_map_ready">Map is ready</string>
    <string name="toast_location_null">unable to get current location</string>
    <string name="login_check_credentials">Busy checking login credentials... please wait...</string>
    <string name="login_user">Loggin you in... please wait...</string>
    <string name="reset_sending_information">Busy sending reset instructions... please wait...</string>
    <string name="ic_drawer_share">share</string>
    <string name="ic_drawer_settings">settings</string>
    <string name="ic_drawer_logout">logout</string>
    <string name="ic_drawer_info">impressum</string>
    <string name="ic_drawer_send">send</string>
    <string name="ic_drawer_map">Map</string>
    <string name="ic_drawer_artefacts">Artefacts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_new_artefact_name">Artefact name</string>
    <string name="hint_new_artefact_description">Artefact description</string>
    <string name="hint_new_artefact_date">Which epoche?</string>
    <string name="button_new_artefact">Save</string>
    <string name="button_new_artefact_image">Take a picture</string>
    <string name="button_new_artefact_audio">Record audio file (optional)</string>
    <string name="button_new_artefact_audio_play">Play</string>
    <string name="button_new_artefact_audio_pause">Pause</string>
    <string name="button_new_artefact_audio_stop">Stop</string>
    <string name="button_new_artefact_audio_remove">Remove</string>
    <string name="list_of_artefacts">List of Artefacts</string>
    <string name="new_artefact_save_image">Saving image... please wait...</string>
    <string name="new_artefact_save_audio">Saving audio... please wait...</string>
    <string name="new_artefact_add_marker">Adding marker to map... please wait...</string>
    <string name="new_artefact_create_artefact">Busy creating new artefact... please wait...</string>
    <string name="new_artefact_add_category">Add Category</string>
    <string name="retrieve_artefacts_from_backendless">Retrieve artefacts... please wait...</string>
    <string name="user_logout">Logout successful</string>
    <string name="toast_backendless_image_upload">Photo successfully uploaded</string>
    <string name="toast_backendless_create_new_artefact">Busy creating new artefact... please wait...</string>
    <string name="cardview_default_category">#roma, #basilika</string>
    <string name="cardview_default_description">super rare artefact, mint</string>
    <string name="cardview_default_name">Name of artefact</string>
    <string name="artefact_image">Artefact Image</string>
    <string name="artefact_detail_name">Artefact detail name</string>
    <string name="artefact_detail_category">Artefact detail category</string>
    <string name="artefact_detail_description">Artefact detail description</string>
    <string name="button_artefact_detail_show_marker_on_map">Show marker</string>
    <string name="artefact_detail_save_rating">rate</string>
    <string name="origin">origin</string>
    <string name="navigate_to_artefact_activity">artefacts</string>
    <string name="mapactivity_title">ArtefactMap</string>
    <string name="login_empty_field_error">Field can\'t be empty</string>
    <string name="artefact_detail_author">Author: </string>
    <string name="artefact_detail_created">Created: </string>
    <string name="backendless_property_ownerid">ownerId</string>
    <string name="backendless_property_name">name</string>
    <string name="artefact_detail_delete_image">Delete image... please wait...</string>
    <string name="artefact_detail_delete_audio">Delete Audio file... please wait...</string>
    <string name="artefact_detail_remove_marker">Remove Marker... please wait...</string>
    <string name="artefact_detail_delete_artefact">Delete Artefact... please wait...</string>
    <string name="button_edit_artefact">Edit Artefact</string>
    <string name="artefact_detail_updated">Updated:</string>
</resources>
