<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--    this group will stay selected   -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/ic_drawer_map" />

        <item
            android:id="@+id/nav_artefacts"
            android:icon="@drawable/ic_blur"
            android:title="@string/ic_drawer_artefacts" />

        <item
            android:id="@+id/nav_impressum"
            android:icon="@drawable/ic_info"
            android:title="@string/ic_drawer_info" />

    </group>

    <!--    this items will trigger an action   -->
    <item android:title="Settings">
        <menu>
<!--
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/ic_drawer_share" />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/ic_drawer_send" />
-->

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/ic_drawer_settings" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/ic_drawer_logout" />
        </menu>
    </item>
</menu>