<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/register_form"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_register_name"
            android:hint="@string/edit_register_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_register_email"
            android:hint="@string/edit_register_email"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_register_password"
            android:hint="@string/edit_register_password"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_register_password_again"
            android:hint="@string/edit_register_password_again"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_register_submit"
                android:text="@string/button_register_submit"
                android:background="@drawable/buttons"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
<!--
            <Button
                android:id="@+id/button_register_login"
                android:text="@string/button_register_login"
                android:background="@drawable/buttons"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />-->

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
