<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_artefact"
    android:layout_width="160dp"
    android:layout_height="300dp"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_cardview_artefact"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/civitas_dark_grey"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/text_cardview_artefact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cardview_default_name"
            android:textColor="@color/civitas_dark_grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_cardview_artefact_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardview_default_category"
            android:textColor="@color/civitas_dark_grey" />

        <TextView
            android:id="@+id/text_cardview_artefact_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardview_default_description" />

    </LinearLayout>

</android.support.v7.widget.CardView>