<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_artefact_detail"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" />

                <ImageView
                    android:id="@+id/image_artefact_detail"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/civitas_main_logo" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <RatingBar
                    android:id="@+id/ratingbar_artefact_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="2"
                    android:stepSize="1" />

                <Button
                    android:id="@+id/button_artefact_detail_save_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/buttons"
                    android:text="@string/artefact_detail_save_rating" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_artefact_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/artefact_detail_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_artefact_detail_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artefact_detail_category" />

            <TextView
                android:id="@+id/text_artefact_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artefact_detail_description" />

            <LinearLayout
                android:id="@+id/layout_artefact_detail_audio_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/button_artefact_detail_audio_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:padding="8dp"
                    android:src="@drawable/ic_audio_play" />

                <ImageButton
                    android:id="@+id/button_artefact_detail_audio_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:padding="8dp"
                    android:src="@drawable/ic_audio_pause" />

                <ImageButton
                    android:id="@+id/button_artefact_detail_audio_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:padding="8dp"
                    android:src="@drawable/ic_audio_stop" />

            </LinearLayout>

            <Button
                android:id="@+id/button_artefact_detail_show_marker_on_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttons"
                android:text="@string/button_artefact_detail_show_marker_on_map" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>